# mapproxy-wms-retry

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: docker.yaml
conf/: mapproxy.yaml
mapproxy_wms_retry/: pluginmodule.py
src/mapproxy_wms_retry/: pluginmodule.py
